src/tiddlywiki-calendar/tiddlywiki-ui/PageLayout/CalendarLayout.css
div.tc-page-container.tw-calendar-layout-container {
  margin-top: 0px;
  height: 100vh;
  width: 100%;
}
.tw-calendar-layout-main-area {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
}

.tw-calendar-draggable-region {
  cursor: grab;
  -webkit-app-region: drag;
}

.tw-calendar-search-layout-main-area {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}
.tw-calendar-search-layout-main-area .tw-calendar-search-bar {
  height: 4em;
  width: 100%;
  display: flex;
  flex-direction: row;
}
.tw-calendar-search-layout-main-area .tw-calendar-search-calendar-container {
  height: calc(100vh - 4em);
}
.tw-calendar-search-bar .tw-calendar-search-bar-icon {
  height: 100%;
  aspect-ratio: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.tw-calendar-search-bar .tw-calendar-search-bar-pagination {
  height: 100%;
  padding: 0 1em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.tw-calendar-search-bar .tw-calendar-search-bar-text-field {
  width: 100%;
  display: flex;
  margin: 0.1em;
  margin-left: 0;
}

.tw-calendar-layout-container p {
  margin: 0;
  height: 100%;
  width: 100%;
}

.event-calendar-container {
  height: 100vh;
  flex: 1;
}
.tw-calendar-layout-main-area div.event-calendar-sidebar {
  position: initial;
  display: flex;
  flex-direction: column;
  margin: 0;
}

.tc-page-controls svg.tc-image-tmd-calendar-cursor {
  fill: <<colour toolbar-options-button>>;
}

